kubernetes/nginx-gateway-fabric/k8s/shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: nginx-gateway

spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          # 允许哪些命名空间的路由绑定
          from: All

    - name: https-domain
      protocol: HTTPS
      port: 443
      hostname: "domain"
      tls:
        mode: Terminate
        certificateRefs:
          # 引用 TLS 证书 Secret
          - name: tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-wildcard-domain
      protocol: HTTPS
      port: 443
      hostname: "*.domain"
      tls:
        mode: Terminate
        certificateRefs:
          # 引用 TLS 证书 Secret
          - name: tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
