kubernetes/nginx-gateway-fabric/k8s/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-direct
  namespace: nginx-gateway
spec:
  parentRefs:
    - name: shared-gateway
      namespace: nginx-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
